--- a/.github/workflow/convert-to-pdf.yml
+++ b/.github/workflow/convert-to-pdf.yml
@@ -1,6 +1,4 @@
-# .github/workflows/convert-to-pdf.yml
-
-name: Docs to PDF
+name: convert
 # This workflow is triggered on pushes to the repository.
 on:
   push:
@@ -10,7 +8,7 @@ jobs:
     name: Build PDF
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Build book
         run: |-
           npm install -g md-to-pdf
