docs: update @shsingh as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -27,7 +27,8 @@
       "profile": "https://shain.io/",
       "contributions": [
         "doc",
-        "research"
+        "research",
+        "review"
       ]
     }
   ],
