docs: update @sagarbhure as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,7 +17,9 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/25385987?v=4",
       "profile": "https://github.com/sagarbhure",
       "contributions": [
-        "doc"
+        "doc",
+        "research",
+        "review"
       ]
     },
     {
