docs: update @sagarbhure as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -19,7 +19,11 @@
       "contributions": [
         "doc",
         "research",
-        "review"
+        "review",
+        "code",
+        "content",
+        "promotion",
+        "question"
       ]
     },
     {
