--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -34,7 +34,11 @@
       "contributions": [
         "doc",
         "research",
-        "review"
+        "review",
+        "code",
+        "content",
+        "promotion",
+        "question"
       ]
     }
   ],
