docs: add @kingthorin as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -63,6 +63,15 @@
         "code",
         "question"
       ]
+    },
+    {
+      "login": "kingthorin",
+      "name": "Rick M",
+      "avatar_url": "https://avatars.githubusercontent.com/u/7570458?v=4",
+      "profile": "https://github.com/kingthorin",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
