--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -81,6 +81,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "RiccardoBiosas",
+      "name": "RiccardoBiosas",
+      "avatar_url": "https://avatars.githubusercontent.com/u/65150720?v=4",
+      "profile": "https://github.com/RiccardoBiosas",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
