docs: add @aryanxk02 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -90,6 +90,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "aryanxk02",
+      "name": "Aryan Kenchappagol",
+      "avatar_url": "https://avatars.githubusercontent.com/u/59761275?v=4",
+      "profile": "https://github.com/aryanxk02",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "contributorsPerLine": 7
