--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -5,7 +5,7 @@
   "repoHost": "https://github.com",
   "files": [
     "CONTRIBUTORS.md",
-    "tab_contributors.md"
+    "README.md"
   ],
   "imageSize": 100,
   "commit": true,
