chore: update CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,58 @@
+# Project Leads
+
 *       @shsingh @sagarbhure
 
-/2023/ @shsingh @sagarbhure @axsaucedo 
+# Core Contributors
 
+/docs/ @shsingh @sagarbhure
+
+# ML01 Lead
+
+#/docs/ML01*
+#/docs/cheatsheets/ML01*
+
+
+# ML02 Lead
+
+#/docs/ML02*
+#/docs/cheatsheets/ML02*
+
+# ML03 Lead
+
+#/docs/ML03*
+#/docs/cheatsheets/ML03*
+
+# ML04 Lead
+
+#/docs/ML04*
+#/docs/cheatsheets/ML04*
+
+# ML05 Lead
+
+#/docs/ML05*
+#/docs/cheatsheets/ML05*
+
+# ML06 Lead
+
+#/docs/ML06*
+#/docs/cheatsheets/ML06*
+
+# ML07 Lead
+
+#/docs/ML07*
+#/docs/cheatsheets/ML07*
+
+# ML08 Lead
+
+#/docs/ML08*
+#/docs/cheatsheets/ML08*
+
+# ML09 Lead
+
+#/docs/ML09*
+#/docs/cheatsheets/ML09*
+
+# ML10 Lead
+
+#/docs/ML10*
+#/docs/cheatsheets/ML10*
