chore: add mik0w to CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,10 +1,10 @@
 # Project Leads
 
-*       @shsingh @sagarbhure
+*                         @shsingh @sagarbhure
 
 # Core Contributors
 
-/docs/ @shsingh @sagarbhure
+/docs/                    @shsingh @sagarbhure
 
 # ML01 Lead
 
@@ -34,8 +34,8 @@
 
 # ML06 Lead
 
-#/docs/ML06*
-#/docs/cheatsheets/ML06*
+/docs/ML06*               @mik0w
+/docs/cheatsheets/ML06*   @mik0w @shsingh @sagarbhure
 
 # ML07 Lead
 
