docs: update @aryanxk02 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -97,7 +97,10 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/59761275?v=4",
       "profile": "https://github.com/aryanxk02",
       "contributions": [
-        "doc"
+        "doc",
+        "code",
+        "question",
+        "promotion"
       ]
     },
     {
