--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -97,7 +97,10 @@
       "avatar_url": "https://avatars.githubusercontent.com/u/59761275?v=4",
       "profile": "https://github.com/aryanxk02",
       "contributions": [
-        "doc"
+        "doc",
+        "code",
+        "question",
+        "promotion"
       ]
     },
     {
@@ -110,6 +113,16 @@
         "doc",
         "question",
         "promotion"
+      ]
+    },
+    {
+      "login": "adityoari",
+      "name": "Adit Nugroho",
+      "avatar_url": "https://avatars.githubusercontent.com/u/28642576?v=4",
+      "profile": "https://github.com/adityoari",
+      "contributions": [
+        "code",
+        "doc"
       ]
     }
   ],
