chore: add techiemac to CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -39,8 +39,8 @@
 
 # ML07 Lead
 
-#/docs/ML07*
-#/docs/cheatsheets/ML07*
+/docs/ML07*               @techiemac
+/docs/cheatsheets/ML07*   @techiemac @shsingh @sagarbhure
 
 # ML08 Lead
 
