chore: add Benjamin-KY to CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,8 +8,8 @@
 
 # ML01 Lead
 
-#/docs/ML01*
-#/docs/cheatsheets/ML01*
+/docs/ML01*              @Benjamin-KY
+/docs/cheatsheets/ML01*  @Benjamin-KY @shsingh @sagarbhure
 
 
 # ML02 Lead
@@ -19,7 +19,7 @@
 
 # ML03 Lead
 
-/docs/ML03                @yodap-dg
+/docs/ML03*               @yodap-dg
 /docs/cheatsheets/ML03*   @yodap-dg @shsingh @sagarbhure
 
 # ML04 Lead
